# COWTRACK-BACKEND-2

./: README.md  manage.py  pyproject.toml
branch/: models.py  permissions.py  serializers.py  urls.py  views.py
branch/migrations/: 0002_branch.py
core/: models.py
core/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py
cowtrack/: asgi.py  settings.py  urls.py  wsgi.py
cowtrack/settings/: base.py  local.py
data/: branch_customer.sql  branch_salesperson.sql  core_user.sql  core_user_manager.sql  core_user_salesperson.sql  core_user_supplier.sql  sales_analytics_branch.sql  sales_analytics_cart.sql  sales_analytics_customer.sql  sales_analytics_manager.sql  sales_analytics_paymentmethod.sql  sales_analytics_product.sql  sales_analytics_productcategory.sql  sales_analytics_sale.sql  sales_analytics_salesperson.sql  sales_analytics_salespersonbranch.sql  sales_analytics_supplier.sql  seed.sql
sales_analytics/: models.py  permissions.py  serializers.py  urls.py  views.py
sales_analytics/migrations/: 0001_initial.py  0002_branch.py  0003_salespersonbranch.py  0004_rename_created_at_salespersonbranch_assignment_date.py  0005_salespersonbranch_termination_date.py  0006_productcategory.py  0007_product.py  0008_set_product_is_serialized_to_false.py  0009_paymentmethod.py  0010_cart.py  0011_add_customer_to_cart.py  0012_sale.py  0013_completedsales.py  0014_add_sale_is_completed.py  0015_rename_completedsales_completedsale.py  0016_rename_sales_person_sale_salesperson.py  0017_remove_sale_amount_remove_sale_amount_currency.py  (+2 more)
(+3 files in other folders)
